...
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_peer_name"
            android:layout_width="wrap_content"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_peer_name" />

        <Button
            android:id="@+id/btn_listen_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_listen_answer"
            app:layout_constraintTop_toBottomOf="@id/sb_knowledge" />

        <Button
            android:id="@+id/btn_listen_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_listen_question"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sb_knowledge" />

        <Button
            android:id="@+id/btn_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_good"
            app:layout_constraintTop_toBottomOf="@+id/btn_listen_answer" />

        <Button
            android:id="@+id/btn_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
